--- a/src/main/resources/application-liquibase.yml
+++ b/src/main/resources/application-liquibase.yml
@@ -1,3 +1,3 @@
 spring:
   liquibase:
-    change-log: classpath:liquibase/changelog-master.yml
+    change-log: classpath:liquibase/changelog-master.xml
