--- a/src/main/resources/application-email.yml
+++ b/src/main/resources/application-email.yml
@@ -2,8 +2,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: gadashovali13@gmail.com
-    password: xidg camh mpbs kjtw
+    username: 
+    password: 
     default-encoding: UTF-8
     protocol: smtp
     properties:
